# zha-firmware

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  info.md  pyproject.toml  release-please-config.json  renovate.json  requirements_dev.txt  requirements_test.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  hacs.yml  hassfest.yml  release.yml  renovate.yml  security-audit.yml  stale.yml
custom_components/zha_firmware/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  provider_registry.py  sensor.py  services.yaml  strings.json
custom_components/zha_firmware/translations/: fr.json
scripts/: develop  lint  setup  test
tests/: __init__.py  test_manifest.py  test_provider_registry.py
