[project]
name = "zha_firmware"
version = "0.0.0"
description = "ZHA Firmware OTA Manager — add community firmware sources to Home Assistant's ZHA integration."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["custom_components"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "RUF",   # ruff-specific
    "D",     # pydocstyle
]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.zha_firmware"]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# zigpy is imported lazily to reach ZHA's OTA registry; it may lack complete
# type information, so we do not fail strict type checking on it.
[[tool.mypy.overrides]]
module = ["zigpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-qq --cov=custom_components/zha_firmware --cov-report=term-missing"
